fix z-index

--- a/Projects/Stimlex/client_build/css/style.css
+++ b/Projects/Stimlex/client_build/css/style.css
@@ -2521,7 +2521,7 @@ section {
     -webkit-transform: translate(-50%);
         -ms-transform: translate(-50%);
             transform: translate(-50%);
-    z-index: 11;
+    z-index: 9;
 }
 .details .details1 {
     position: absolute;
