--- a/Projects/Stimlex/client_src/less/12_section4 — details.less
+++ b/Projects/Stimlex/client_src/less/12_section4 — details.less
@@ -144,7 +144,7 @@
 		top: -20px;
 		left: 50%;
 		transform: translate(-50%);
-		z-index: 11;
+		z-index: 9;
 	}
 
 	.details1 {
